--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,1 @@
-export YOUR_TRAIN_DATASET_PATH="/your/project/root/data/blues/train"
-export YOUR_VAL_DATASET_PATH="/your/project/root/data/blues/val"
-export YOUR_TEST_DATASET_PATH="/your/project/root/data/blues/test"
+export MNIST="/tmp"
