--- a/conf/data/default.yaml
+++ b/conf/data/default.yaml
@@ -8,13 +8,13 @@ datamodule:
       _target_: src.pl_data.dataset.MyDataset
       name: MNIST_TRAIN
       train: True
-      path: ${env:MNIST}
+      path: ${oc.env:MNIST}
 
     test:
       - _target_: src.pl_data.dataset.MyDataset
         name: MNIST_TEST
         train: False
-        path: ${env:MNIST}
+        path: ${oc.env:MNIST}
 
   num_workers:
     train: 8
