Initialize documentation with mkdocs

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,11 @@ where=src
 * = *.txt, *.md
 
 [options.extras_require]
+docs =
+    mkdocs
+    mkdocs-material
+    mike
+
 # Test dependencies
 test =
     pytest
@@ -51,3 +56,4 @@ dev =
     pre-commit
     bandit
     %(test)s
+    %(docs)s
